--- a/_slides/002.html
+++ b/_slides/002.html
@@ -5,4 +5,4 @@ title: "General Overview"
 
 <h4>General Overview</h4>
 
-<img src="{{site.url}}/images/003.png" alt="">
+<img src="{{site.url}}{{site.baseurl}}/images/003.png" alt="">
