--- a/_slides/006.html
+++ b/_slides/006.html
@@ -1,8 +1,9 @@
 ---
 title: "Input: Import inputfiles"
+body_class: "grey"
 ---
 
 
 <h4>Input: Import inputfiles</h4>
 
-<img src="/images/006.png" alt="">
+<img src="{{site.url}}{{site.baseurl}}/images/006.png" alt="">
