--- a/_slides/011.html
+++ b/_slides/011.html
@@ -4,4 +4,4 @@ title: "Import Invest IQ Files (2)"
 
 <h4>Import Invest IQ Files (2)</h4>
 
-<img src="/images/011.png" alt="">
+<img src="{{site.url}}{{site.baseurl}}/images/011.png" alt="">
