--- a/_slides/020.html
+++ b/_slides/020.html
@@ -5,4 +5,4 @@ title: "Input: Config"
 
 <h4>Input: Config</h4>
 
-<img src="/images/020.png" alt="">
+<img src="{{site.url}}{{site.baseurl}}/images/020.png" alt="">
