--- a/_slides/023.html
+++ b/_slides/023.html
@@ -5,4 +5,4 @@ title: "Create input file: Run scrapers"
 
 <h4>Create input file: Run scrapers</h4>
 
-<img src="/images/023.png" alt="">
+<img src="{{site.url}}{{site.baseurl}}/images/023.png" alt="">
