--- a/_slides/025.html
+++ b/_slides/025.html
@@ -5,4 +5,4 @@ title: "Create input file: Edit outputfile (2)"
 
 <h4>Create input file: Edit outputfile (2)</h4>
 
-<img src="/images/025.png" alt="">
+<img src="{{site.url}}{{site.baseurl}}/images/025.png" alt="">
