--- a/_slides/026.html
+++ b/_slides/026.html
@@ -5,4 +5,4 @@ title: "Create input file: Create inputfile"
 
 <h4>Create input file: Create inputfile</h4>
 
-<img src="/images/026.png" alt="">
+<img src="{{site.url}}{{site.baseurl}}/images/026.png" alt="">
