--- a/_slides/028.html
+++ b/_slides/028.html
@@ -5,4 +5,4 @@ title: "Create input file: Create inputfile (3)"
 
 <h4>Create input file: Create inputfile (3)</h4>
 
-<img src="/images/028.png" alt="">
+<img src="{{site.url}}{{site.baseurl}}/images/028.png" alt="">
