--- a/_slides/035.html
+++ b/_slides/035.html
@@ -7,5 +7,5 @@ title: "Adding a new scraper (2)"
 
 <up>
 	<li>1.1. Add a script</li>
-	<img src="/images/035.png" alt="">
+	<img src="{{site.url}}{{site.baseurl}}/images/035.png" alt="">
 </ul>
