--- a/_slides/036.html
+++ b/_slides/036.html
@@ -7,5 +7,5 @@ title: "Adding a new scraper (3)"
 
 <up>
 	<li>1.2. Add a script</li>
-	<img src="/images/036.png" alt="">
+	<img src="{{site.url}}{{site.baseurl}}/images/036.png" alt="">
 </ul>
