--- a/_slides/039.html
+++ b/_slides/039.html
@@ -7,5 +7,5 @@ title: "Adding a new scraper (6)"
 
 <up>
 	<li>2.1. Insert records into the <a href="#">Match uploaded columns to scraper inputs</a> -table</li>
-	<img src="/images/039.png" alt="">
+	<img src="{{site.url}}{{site.baseurl}}/images/039.png" alt="">
 </ul>
