--- a/_slides/041.html
+++ b/_slides/041.html
@@ -5,5 +5,5 @@ title: "Using the new scraper in the metrics table"
 
 <h4>Using the new scraper in the metrics table</h4>
 
-<img src="/images/041.png" alt="">
+<img src="{{site.url}}{{site.baseurl}}/images/041.png" alt="">
 
