--- a/_slides/049.html
+++ b/_slides/049.html
@@ -3,4 +3,4 @@ title: "Creating a new metric-formula-type"
 ---
 
 
-<img src="/images/049.png" alt="">
+<img src="{{site.url}}{{site.baseurl}}/images/049.png" alt="">
