--- a/_slides/052.html
+++ b/_slides/052.html
@@ -5,5 +5,5 @@ title: "Python processing"
 
 <h4>Python processing</h4>
 
-<img src="/images/052.png" alt="">
+<img src="{{site.url}}{{site.baseurl}}/images/052.png" alt="">
 
