--- a/_slides/053.html
+++ b/_slides/053.html
@@ -5,5 +5,5 @@ title: "Export"
 
 <h4>Export</h4>
 
-<img src="/images/053.png" alt="">
+<img src="{{site.url}}{{site.baseurl}}/images/053.png" alt="">
 
