--- a/_slides/058.html
+++ b/_slides/058.html
@@ -5,4 +5,4 @@ title: "Output files"
 
 <h4><a href="#">Output files</a></h4>
 
-<img src="/images/058.png" alt="">
+<img src="{{site.url}}{{site.baseurl}}/images/058.png" alt="">
