--- a/_slides/062.html
+++ b/_slides/062.html
@@ -5,4 +5,4 @@ title: "Method 5: Using Metrics calculations results"
 
 <h4>Method 5: Using <a href="#">Metrics calculations results</a></h4>
 
-<img src="/images/062.png" alt="">
+<img src="{{site.url}}{{site.baseurl}}/images/062.png" alt="">
