--- a/_slides/066.html
+++ b/_slides/066.html
@@ -5,4 +5,4 @@ title: "Manual Running of parts of the script"
 
 <h4>Manual Running of parts of the script</h4>
 
-<img src="/images/066.png" alt="">
+<img src="{{site.url}}{{site.baseurl}}/images/066.png" alt="">
