--- a/_slides/071.html
+++ b/_slides/071.html
@@ -5,4 +5,4 @@ title: "After using the export-action"
 
 <h4>After using the export-action<br>Modify the selection-profile</h4>
 
-<img src="/images/071.png" alt="">
+<img src="{{site.url}}{{site.baseurl}}/images/071.png" alt="">
