--- a/_slides/078.html
+++ b/_slides/078.html
@@ -5,4 +5,4 @@ title: "EICC/EITI Change (3)"
 
 <h4>EICC/EITI Change (3)</h4>
 
-<img src="/images/078.png" alt="">
+<img src="{{site.url}}{{site.baseurl}}/images/078.png" alt="">
