--- a/_slides/081.html
+++ b/_slides/081.html
@@ -5,4 +5,4 @@ title: "Input: using fuzzy string comparison "
 
 <h4>Input: using fuzzy string comparison </h4>
 
-<img src="/images/081.png" alt="">
+<img src="{{site.url}}{{site.baseurl}}/images/081.png" alt="">
