--- a/_slides/085.html
+++ b/_slides/085.html
@@ -5,4 +5,4 @@ title: "Obsolete scrapers: Scraper scripts"
 
 <h4>Obsolete scrapers: <a href="#">Scraper scripts</a></h4>
 
-<img src="/images/085.png" alt="">
+<img src="{{site.url}}{{site.baseurl}}/images/085.png" alt="">
