--- a/_slides/086.html
+++ b/_slides/086.html
@@ -5,4 +5,4 @@ title: "Select which scrapers will run Using Scraper scripts "
 
 <h4>Select which scrapers will run Using <a href="#">Scraper scripts</a></h4>
 
-<img src="/images/086.png" alt="">
+<img src="{{site.url}}{{site.baseurl}}/images/086.png" alt="">
