--- a/_slides/087.html
+++ b/_slides/087.html
@@ -5,4 +5,4 @@ title: "Select which scrapers will run Using Scraper variables"
 
 <h4>Select which scrapers will run Using <a href="#">Scraper variables</a></h4>
 
-<img src="/images/087.png" alt="">
+<img src="{{site.url}}{{site.baseurl}}/images/087.png" alt="">
