--- a/_slides/090.html
+++ b/_slides/090.html
@@ -5,4 +5,4 @@ title: "Running a scraper based on other scrapers"
 
 <h4>Running a scraper based on other scrapers</h4>
 
-<img src="/images/090.png" alt="">
+<img src="{{site.url}}{{site.baseurl}}/images/090.png" alt="">
