--- a/_slides/097.html
+++ b/_slides/097.html
@@ -5,4 +5,4 @@ title: "DP not based on scrapers and not based on BBG/DS"
 
 <h4>DP not based on scrapers and not based on BBG/DS</h4>
 
-<img src="/images/097.png" alt="">
+<img src="{{site.url}}{{site.baseurl}}/images/097.png" alt="">
