--- a/_slides/102.html
+++ b/_slides/102.html
@@ -9,5 +9,5 @@ title: "Step 1: scraping input"
 	<li><a href="#">http://scrapecalctool.scibizinformatics.com/admin/base/company_input/</a>: glassdoor URL and eekingalpha</li>
 </ul>
 
-<img src="/images/102.png" alt="">
+<img src="{{site.url}}{{site.baseurl}}/images/102.png" alt="">
 
