--- a/_slides/103.html
+++ b/_slides/103.html
@@ -4,4 +4,4 @@ title: "Step 1: Start Scraping GD"
 
 <h4>Step 1: Start Scraping GD</h4>
 
-<img src="/images/103.png" alt="">
+<img src="{{site.url}}{{site.baseurl}}/images/103.png" alt="">
