--- a/_slides/108.html
+++ b/_slides/108.html
@@ -4,4 +4,4 @@ title: "Step 2: run analysis"
 
 <h4>Step 2: run analysis</h4>
 
-<img src="/images/108.png" alt="">
+<img src="{{site.url}}{{site.baseurl}}/images/108.png" alt="">
