--- a/_slides/004.html
+++ b/_slides/004.html
@@ -5,4 +5,4 @@ title: "Empty the database"
 
 <h4>Empty the database</h4>
 
-<img src="/images/004.png" alt="">
+<img src="{{site.url}}{{site.baseurl}}/images/004.png" alt="">
