--- a/_slides/007.html
+++ b/_slides/007.html
@@ -5,4 +5,4 @@ title: "Import companies"
 
 <h4>Import companies</h4>
 
-<img src="/images/007.png" alt="">
+<img src="{{site.url}}{{site.baseurl}}/images/007.png" alt="">
