--- a/_slides/008.html
+++ b/_slides/008.html
@@ -5,4 +5,4 @@ title: "Import companies: Results"
 
 <h4>Import companies: Results</h4>
 
-<img src="/images/008.png" alt="">
+<img src="{{site.url}}{{site.baseurl}}/images/008.png" alt="">
