--- a/_slides/010.html
+++ b/_slides/010.html
@@ -4,4 +4,4 @@ title: "Import Invest IQ Files"
 
 <h4>Import Invest IQ Files</h4>
 
-<img src="/images/010.png" alt="">
+<img src="{{site.url}}{{site.baseurl}}/images/010.png" alt="">
