--- a/_slides/014.html
+++ b/_slides/014.html
@@ -6,4 +6,4 @@ title: "Input: Import from Database Tables"
 <h4>Input: Import from Database Tables</h4>
 <a href="#">Scraper scripts</a>
 
-<img src="/images/014.png" alt="">
+<img src="{{site.url}}{{site.baseurl}}/images/014.png" alt="">
