--- a/_slides/015.html
+++ b/_slides/015.html
@@ -6,4 +6,4 @@ title: "Input: Import from Database Tables"
 <h4>Input: Import from Database Tables</h4>
 <a href="#">Scraper scripts</a>
 
-<img src="/images/015.png" alt="">
+<img src="{{site.url}}{{site.baseurl}}/images/015.png" alt="">
