--- a/_slides/016.html
+++ b/_slides/016.html
@@ -6,4 +6,4 @@ title: "Input: Import from Database Tables"
 <h4>Input: Import from Database Tables</h4>
 <a href="#">Match uploaded columns to scraper inputs</a>
 
-<img src="/images/016.png" alt="">
+<img src="{{site.url}}{{site.baseurl}}/images/016.png" alt="">
