--- a/_slides/017.html
+++ b/_slides/017.html
@@ -6,4 +6,4 @@ title: "Input: Import from Database Tables"
 <h4>Input: Import from Database Tables</h4>
 <a href="#">Wikirate metric list</a>
 
-<img src="/images/017.png" alt="">
+<img src="{{site.url}}{{site.baseurl}}/images/017.png" alt="">
