--- a/_slides/018.html
+++ b/_slides/018.html
@@ -6,4 +6,4 @@ title: "Input: Import from Database Tables"
 <h4>Input: Import from Database Tables</h4>
 <a href="#">Define datapoints</a>
 
-<img src="/images/018.png" alt="">
+<img src="{{site.url}}{{site.baseurl}}/images/018.png" alt="">
