--- a/_slides/019.html
+++ b/_slides/019.html
@@ -6,4 +6,4 @@ title: "Input: Import from Database Tables"
 <h4>Input: Import from Database Tables</h4>
 <a href="#">Define metrics</a>
 
-<img src="/images/019.png" alt="">
+<img src="{{site.url}}{{site.baseurl}}/images/019.png" alt="">
