--- a/_slides/024.html
+++ b/_slides/024.html
@@ -5,4 +5,4 @@ title: "Create input file: Edit outputfile"
 
 <h4>Create input file: Edit outputfile</h4>
 
-<img src="/images/024.png" alt="">
+<img src="{{site.url}}{{site.baseurl}}/images/024.png" alt="">
