--- a/_slides/027.html
+++ b/_slides/027.html
@@ -5,4 +5,4 @@ title: "Create input file: Create inputfile (2)"
 
 <h4>Create input file: Create inputfile (2)</h4>
 
-<img src="/images/027.png" alt="">
+<img src="{{site.url}}{{site.baseurl}}/images/027.png" alt="">
