--- a/_slides/037.html
+++ b/_slides/037.html
@@ -7,5 +7,5 @@ title: "Adding a new scraper (4)"
 
 <up>
 	<li>1.3. Add a script</li>
-	<img src="/images/037.png" alt="">
+	<img src="{{site.url}}{{site.baseurl}}/images/037.png" alt="">
 </ul>
