--- a/_slides/038.html
+++ b/_slides/038.html
@@ -7,5 +7,5 @@ title: "Adding a new scraper (5)"
 
 <up>
 	<li>1.4. Add a script</li>
-	<img src="/images/038.png" alt="">
+	<img src="{{site.url}}{{site.baseurl}}/images/038.png" alt="">
 </ul>
