--- a/_slides/040.html
+++ b/_slides/040.html
@@ -7,5 +7,5 @@ title: "Adding a new scraper (7)"
 
 <up>
 	<li>3.1. Insert records into the <a href="#">Scraper variables</a> -table</li>
-	<img src="/images/040.png" alt="">
+	<img src="{{site.url}}{{site.baseurl}}/images/040.png" alt="">
 </ul>
