--- a/_slides/042.html
+++ b/_slides/042.html
@@ -5,5 +5,5 @@ title: "Create a record based on historic data"
 
 <h4>Create a record based on historic data</h4>
 
-<img src="/images/042.png" alt="">
+<img src="{{site.url}}{{site.baseurl}}/images/042.png" alt="">
 
