--- a/_slides/054.html
+++ b/_slides/054.html
@@ -5,5 +5,5 @@ title: "Selection of the outputvariables"
 
 <h4>Selection of the outputvariables</h4>
 
-<img src="/images/054.png" alt="">
+<img src="{{site.url}}{{site.baseurl}}/images/054.png" alt="">
 
