--- a/_slides/056.html
+++ b/_slides/056.html
@@ -3,4 +3,4 @@ title: "Selection of the outputvariables"
 ---
 
 
-<img src="/images/056.png" alt="">
+<img src="{{site.url}}{{site.baseurl}}/images/056.png" alt="">
