--- a/_slides/057.html
+++ b/_slides/057.html
@@ -5,4 +5,4 @@ title: "Uploaded files"
 
 <h4><a href="#">Uploaded files</a></h4>
 
-<img src="/images/057.png" alt="">
+<img src="{{site.url}}{{site.baseurl}}/images/057.png" alt="">
