--- a/_slides/061.html
+++ b/_slides/061.html
@@ -5,4 +5,4 @@ title: "http://scrapecalctool.scibizinformatics.com/output/"
 
 <h4><a href="#">http://scrapecalctool.scibizinformatics.com/output/</a></h4>
 
-<img src="/images/061.png" alt="">
+<img src="{{site.url}}{{site.baseurl}}/images/061.png" alt="">
