--- a/_slides/064.html
+++ b/_slides/064.html
@@ -5,4 +5,4 @@ title: "Normal Run"
 
 <h4>Normal Run</h4>
 
-<img src="/images/064.png" alt="">
+<img src="{{site.url}}{{site.baseurl}}/images/064.png" alt="">
