--- a/_slides/067.html
+++ b/_slides/067.html
@@ -3,4 +3,4 @@ title: "Manual Running of parts of the script"
 ---
 
 
-<img src="/images/067.png" alt="">
+<img src="{{site.url}}{{site.baseurl}}/images/067.png" alt="">
