--- a/_slides/069.html
+++ b/_slides/069.html
@@ -5,4 +5,4 @@ title: "After using the export-action"
 
 <h4>After using the export-action</h4>
 
-<img src="/images/069.png" alt="">
+<img src="{{site.url}}{{site.baseurl}}/images/069.png" alt="">
