--- a/_slides/070.html
+++ b/_slides/070.html
@@ -5,4 +5,4 @@ title: "Redirect to selection screen"
 
 <h4>Redirect to selection screen</h4>
 
-<img src="/images/070.png" alt="">
+<img src="{{site.url}}{{site.baseurl}}/images/070.png" alt="">
