--- a/_slides/072.html
+++ b/_slides/072.html
@@ -5,4 +5,4 @@ title: "After the export: health check"
 
 <h4>After the export: health check</h4>
 
-<img src="/images/072.png" alt="">
+<img src="{{site.url}}{{site.baseurl}}/images/072.png" alt="">
