--- a/_slides/073.html
+++ b/_slides/073.html
@@ -5,4 +5,4 @@ title: "After the export: health check"
 
 <h4>After the export: health check</h4>
 
-<img src="/images/073.png" alt="">
+<img src="{{site.url}}{{site.baseurl}}/images/073.png" alt="">
