--- a/_slides/076.html
+++ b/_slides/076.html
@@ -5,4 +5,4 @@ title: "EICC/EITI Change"
 
 <h4>EICC/EITI Change</h4>
 
-<img src="/images/076.png" alt="">
+<img src="{{site.url}}{{site.baseurl}}/images/076.png" alt="">
