--- a/_slides/077.html
+++ b/_slides/077.html
@@ -5,4 +5,4 @@ title: "EICC/EITI Change (2)"
 
 <h4>EICC/EITI Change (2)</h4>
 
-<img src="/images/077.png" alt="">
+<img src="{{site.url}}{{site.baseurl}}/images/077.png" alt="">
