--- a/_slides/088.html
+++ b/_slides/088.html
@@ -3,4 +3,4 @@ title: "Select which scrapers will run Using Scraper variables"
 ---
 
 
-<img src="/images/088.png" alt="">
+<img src="{{site.url}}{{site.baseurl}}/images/088.png" alt="">
