--- a/_slides/092.html
+++ b/_slides/092.html
@@ -5,4 +5,4 @@ title: "Fill company name and isin code using fuzzy comparison"
 
 <h4>Fill company name and isin code using fuzzy comparison</h4>
 
-<img src="/images/092.png" alt="">
+<img src="{{site.url}}{{site.baseurl}}/images/092.png" alt="">
