--- a/_slides/104.html
+++ b/_slides/104.html
@@ -4,4 +4,4 @@ title: "Step 1: Start Scraping Seeking Alpha"
 
 <h4>Step 1: Start Scraping Seeking Alpha</h4>
 
-<img src="/images/104.png" alt="">
+<img src="{{site.url}}{{site.baseurl}}/images/104.png" alt="">
