--- a/_slides/105.html
+++ b/_slides/105.html
@@ -4,4 +4,4 @@ title: "Step 1: Output GD"
 
 <h4>Step 1: Output GD</h4>
 
-<img src="/images/105.png" alt="">
+<img src="{{site.url}}{{site.baseurl}}/images/105.png" alt="">
