--- a/_slides/106.html
+++ b/_slides/106.html
@@ -4,4 +4,4 @@ title: "Step 1: Output Seeking Alpha"
 
 <h4>Step 1: Output Seeking Alpha</h4>
 
-<img src="/images/106.png" alt="">
+<img src="{{site.url}}{{site.baseurl}}/images/106.png" alt="">
