--- a/_slides/109.html
+++ b/_slides/109.html
@@ -4,4 +4,4 @@ title: "Step 2: output"
 
 <h4>Step 2: output</h4>
 
-<img src="/images/109.png" alt="">
+<img src="{{site.url}}{{site.baseurl}}/images/109.png" alt="">
