--- a/_slides/110.html
+++ b/_slides/110.html
@@ -4,4 +4,4 @@ title: "Step 2: export output"
 
 <h4>Step 2: export output</h4>
 
-<img src="/images/110.png" alt="">
+<img src="{{site.url}}{{site.baseurl}}/images/110.png" alt="">
