--- a/index.html
+++ b/index.html
@@ -1,4 +1,16 @@
 ---
 layout: page
 ---
-<h1>test</h1>
+
+<div class="section">
+<h2>Base page</h2>
+<a href="http://scrapecalctool.scibizinformatics.com/login/?next=/home/">http://scrapecalctool.scibizinformatics.com/login/?next=/home/</a>
+</div>
+<div class="section">
+<h2>Admin URL</h2>
+<a href="http://scrapecalctool.scibizinformatics.com/admin/login/?next=/admin/">
+  http://scrapecalctool.scibizinformatics.com/admin/login/?next=/admin/
+</a>
+</div>
+
+<a href="{{site.url}}{{site.baseurl}}/001/" class="button">Go to slides</a>
