--- a/_tutorials/014.html
+++ b/_tutorials/014.html
@@ -7,6 +7,6 @@ date: 2018-01-18 19:31:06 +0000
 
 
 <h4>Input: Import from Database Tables</h4>
-<a href="#">Scraper scripts</a>
+<a class="text-center" href="http://scrapecalctool.scibizinformatics.com/admin/login/?next=/admin/base/admin_scripts/">Scraper scripts</a>
 
 <img src="{{site.url}}{{site.baseurl}}/images/014.png" alt="">
