--- a/_tutorials/035.html
+++ b/_tutorials/035.html
@@ -1,7 +1,7 @@
 ---
 title: Adding a new scraper (2)
 topic: delete-edit-scrappers
-order: 4
+order: 04
 date: 2018-01-18 19:31:06 +0000
 ---
 <h4>Adding a new scraper (2)</h4>
@@ -16,8 +16,7 @@ date: 2018-01-18 19:31:06 +0000
 		<li>Add a script in the <a href="http://scrapecalctool.scibizinformatics.com/admin/base/admin_scripts/">Scraper scripts</a>-table</li>
 		<li>In spyder (part of anaconda-program) or notepad or any other editor,  you make a new file and copy this:
 
-<p>
-#################################################
+{% highlight python %}
 """
 v 1.000.000: created
 Purpose: get output from CSR
@@ -47,9 +46,8 @@ class CSR_Scraper(object):
         pass
     
     def scrape_CSR(self, CSR_Company_Name, task_id, log_file, teller):
-##############################################
-</p>
-  
+{% endhighlight %}
+
 		</li>
 
 		<li>First lines are comments to indicate the version + the purpose of the program. Not really required.</li>
