--- a/_tutorials/047.html
+++ b/_tutorials/047.html
@@ -1,7 +1,7 @@
 ---
 title: Adding a new metrics
-topic: delete-add-edit-datapoints
-order: 4
+topic: delete-add-edit-metrics
+order: 1
 date: 2018-01-18 19:31:06 +0000
 ---
 <h4>Adding a new metrics</h4>
