--- a/_topic/046.html
+++ b/_topic/046.html
@@ -1,7 +1,7 @@
 ---
 title: Delete/Add/Edit Metrics
-topic: delete-add-edit-datapoints
-order: 3
+slug: delete-add-edit-metrics
+order: 8
 date: 2018-01-18 19:31:06 +0000
 ---
 
